# monorepo-benchmarks

./: .gitignore  BUILD  Makefile  README.md  WORKSPACE  bob.yaml  go.mod  go.work  go.work.sum
apps/: go.mod
apps/go-p1/: .gitignore  BUILD.bazel  main.go
apps/go-p1/pkg/pk1/: BUILD.bazel  pk1.go
benchmark/: main.go
repo-creator/: .gitignore  Makefile  go.mod  main.go
repo-creator/template/: go-project.go  go_project.go  go_project_test.go
