load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go-p1_lib",
    srcs = ["main.go"],
    importpath = "monorepo-benchmarks/apps/go-p1",
    visibility = ["//visibility:private"],
    deps = ["//apps/go-p1/pkg/pk1"],
)

go_binary(
    name = "go-p1",
    embed = [":go-p1_lib"],
    visibility = ["//visibility:public"],
)
